✨ Initial Nav view pane and resposive

--- a/src/pages/_layout.pug
+++ b/src/pages/_layout.pug
@@ -9,13 +9,15 @@ html(lang="en")
 		link(rel="stylesheet" href="./css/libraries-ui.min.css")
 		link(rel="stylesheet" href="./css/all.min.css")
 		title #{title}
+		
 	body
-		main(data-role='navview' data-compact='fs' data-expand='lg' data-active-state='true')
-			include ../partials/sidebar/_sidebar.pug
+		main(data-role='navview' data-compact='fs' data-expand='xl' data-active-state='true')
+			include ../partials/navview-pane/_navview-pane.pug
 			.navview-content
 				block header
 					include ../partials/header/_header.pug
 				block main-content
 		block footer
+	block script
 	script(src="./js/libraries-ui.min.js")
 	script(src="./js/all.min.js")
