--- a/src/partials/navview-pane/_navview-pane.pug
+++ b/src/partials/navview-pane/_navview-pane.pug
@@ -10,9 +10,9 @@ nav.navview-pane
 			a(href='#')
 				span.icon
 					span.mif-home
-				span.caption Home
+				span.caption Dashboard
 		li.item-separator
-		li.item-header Main pages
+		li.item-header Thống kê
 		li
 			a(href='#')
 				span.icon
