--- a/src/partials/navview-pane/_navview-pane.pug
+++ b/src/partials/navview-pane/_navview-pane.pug
@@ -7,17 +7,17 @@ nav.navview-pane
 			span.mif-search
 	ul.navview-menu
 		li
-			a(href='#')
+			a(href='index.html')
 				span.icon
 					span.mif-home
 				span.caption Dashboard
 		li.item-separator
-		li.item-header Thống kê
+		li.item-header Template
 		li
-			a(href='#')
+			a(href='tables.html')
 				span.icon
 					span.mif-apps
-				span.caption Apps
+				span.caption Table
 		li.active
 			a(href='#')
 				span.icon
