--- a/src/partials/all.sass
+++ b/src/partials/all.sass
@@ -3,3 +3,10 @@ main
 	.navview-content
 		padding: 0 1rem
 @import header/_header
+@import statistics/_statistics
+@import calendar/_calendar
+@import user-active/_user-active
+@import charts/h-chart/_h-chart
+@import charts/c-chart/_c-chart
+@import charts/maps/_maps
+@import notify-system/_notify-system
