--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -39,6 +39,8 @@ block script
 	script(src="https://www.amcharts.com/lib/4/geodata/worldUltra.js")
 	script(src="https://www.amcharts.com/lib/4/geodata/vietnamHigh.js")
 	script(src="https://www.amcharts.com/lib/4/geodata/japanHigh.js")
+	script(src="https://www.amcharts.com/lib/4/geodata/usaLow.js")
+	script(src="https://www.amcharts.com/lib/4/themes/animated.js")
 	script(src="./js/chartMap.min.js")
 	//- ChartJS
 	script(src="./js/Chart.min.js")
