--- a/src/partials/all.sass
+++ b/src/partials/all.sass
@@ -2,6 +2,7 @@ main
 	min-height: 100vh !important
 	.navview-content
 		padding: 0 1rem
+@import navview-pane/_navview-pane
 @import header/_header
 @import statistics/_statistics
 @import calendar/_calendar
@@ -10,3 +11,6 @@ main
 @import charts/c-chart/_c-chart
 @import charts/maps/_maps
 @import notify-system/_notify-system
+@import tables/_tables
+@import forms/_forms
+@import profile/_profile
