--- a/src/partials/navview-pane/_navview-pane.pug
+++ b/src/partials/navview-pane/_navview-pane.pug
@@ -16,21 +16,18 @@ nav.navview-pane
 		li
 			a(href='tables.html')
 				span.icon
-					span.mif-apps
+					span.mdi.mdi-table-large
 				span.caption Table
 		li.active
-			a(href='#')
+			a(href='forms.html')
 				span.icon
-					span.mif-gamepad
-				span.caption Games
+					span.mdi.mdi-application-import
+				span.caption Forms
 		li
-			a(href='#')
+			a(href='profile.html')
 				span.icon
-					span.mif-envelop
-				span.caption Email
-				.badges
-					span.badge.inline 10
-					span.badge.inline 5
+					span.mdi.mdi-account
+				span.caption Profile
 		li
 			a.dropdown-toggle(href='#')
 				span.icon
