--- a/src/partials/header/_header.sass
+++ b/src/partials/header/_header.sass
@@ -8,6 +8,7 @@ header
 		padding-right: 1rem
 		font-size: 1.5rem
 	.v-menu
+		padding-bottom: 1rem
 		li
 			.dropdown-toggle:before
 				transform: rotate(-45deg)
@@ -24,6 +25,7 @@ header
 		.header-right
 			margin-top: 1rem
 		.title
+			font-weight: 700
 			max-width: 100%
 			padding-right: 0
 			font-size: 3rem
