--- a/src/pages/_layout.pug
+++ b/src/pages/_layout.pug
@@ -13,7 +13,7 @@ html(lang="en")
 	body
 		main(data-role='navview' data-compact='fs' data-expand='xl' data-active-state='true')
 			include ../partials/navview-pane/_navview-pane.pug
-			.navview-content
+			section.navview-content
 				block header
 					include ../partials/header/_header.pug
 				block main-content
