--- a/src/partials/all.sass
+++ b/src/partials/all.sass
@@ -14,3 +14,6 @@ main
 @import tables/_tables
 @import forms/_forms
 @import profile/_profile
+@import ../modules/don_hang/list/_list
+@import ../modules/don_hang/create/_create
+@import ../modules/don_hang/detail/_detail
