--- a/src/modules/account_profile/account_profile.sass
+++ b/src/modules/account_profile/account_profile.sass
@@ -50,6 +50,13 @@ $avatar_size: 64px
 	white-space: nowrap
 	font-weight: 700
 .form
+	&-divider
+		display: block
+		height: 1px
+		margin: 0.5rem 0
+		width: 100%
+		position: relative
+		background-color: #dcddde
 	&-success,
 	&-error
 		margin-bottom: 0.5rem
