--- a/src/modules/account_profile/info/index.pug
+++ b/src/modules/account_profile/info/index.pug
@@ -2,7 +2,7 @@ section.account_profile-info
 	.account_profile-info_row.row
 		.account_profile-info_annotation.col-sm-4
 			.alt-header Chi tiết
-		.account_profile-info_content.col-sm-8
+		.account_profile-info_content.col-sm-8.pt-0
 			.wrapper-content
 				.form-user_avatar
 					.user_avatar
