--- a/src/partials/all.sass
+++ b/src/partials/all.sass
@@ -5,3 +5,5 @@ main
 @import navview-pane/_navview-pane
 @import header/_header
 @import ../modules/account_profile/account_profile
+@import ../modules/products/products
+@import ../partials/login/_login
