--- a/src/partials/navview-pane/_navview-pane.pug
+++ b/src/partials/navview-pane/_navview-pane.pug
@@ -35,7 +35,7 @@ nav.navview-pane
 					span.mdi.mdi-application-import
 				span.caption Forms
 		li
-			a(href='profile.html')
+			a(href='account_profile-info.html')
 				span.icon
 					span.mdi.mdi-account
 				span.caption Profile
