--- a/src/partials/all.sass
+++ b/src/partials/all.sass
@@ -1,16 +1,3 @@
-main
-	min-height: 100vh !important
-	.navview-content
-		padding: 0 1rem
-@import navview-pane/_navview-pane
-@import header/_header
-@import statistics/_statistics
-@import calendar/_calendar
-@import user-active/_user-active
-@import charts/h-chart/_h-chart
-@import charts/c-chart/_c-chart
-@import charts/maps/_maps
-@import notify-system/_notify-system
-@import tables/_tables
-@import forms/_forms
-@import profile/_profile
+
+@import sidebar/sidebar
+@import appbar/appbar
