--- a/src/partials/all.sass
+++ b/src/partials/all.sass
@@ -1,3 +1,10 @@
-
 @import sidebar/sidebar
 @import appbar/appbar
+@import dashboard/dashboard
+main
+	.navview-content
+		padding-top: 52px
+		height: 100%
+	.content_wrapper
+		height: 100%
+		overflow-y: auto
