--- a/src/partials/appbar/appbar.pug
+++ b/src/partials/appbar/appbar.pug
@@ -1,4 +1,4 @@
-section.appbar_wrapper.pos-absolute(data-role='appbar')
+section.appbar_wrapper.pos-absolute(data-role='appbar').bg-white.shadow-1
 	a#paneToggle.app-bar-item.d-block.d-none-lg(href='#')
 		span.mdi.mdi-menu
 	.app-bar-container.ml-auto
@@ -9,7 +9,7 @@ section.appbar_wrapper.pos-absolute(data-role='appbar')
 			a.app-bar-item(href='#')
 				span.mif-bell
 				span.badge.bg-orange.fg-white.mt-2.mr-1 10
-			.pos-absolute.put-sw.mt-1.shadow-1(data-role='collapse' data-collapsed='true' style="line-height: 1.5")
+			.pos-absolute.put-sw.mt-1.shadow-1.bg-white(data-role='collapse' data-collapsed='true' style="line-height: 1.5")
 				ul.feed-list.p-0(style="width: 200px")
 					li.title.px-4.h-auto Notifications
 					li.px-4.py-2.h-auto
