--- a/src/pages/_layout.pug
+++ b/src/pages/_layout.pug
@@ -20,8 +20,8 @@ html(lang="en")
 					aside.container
 						.row.border-bottom.bd-lightGray.mt-4
 							.col-md-4.text-center.text-left-md
-								h3.content_title.m-0 Admin2L 
-									small version 2.0
+								h3.content_title.m-0 #{contentTitle}
+									small #{contentSubTitle}
 							.col-md-8.d-flex.flex-justify-center.flex-justify-end-md
 								include ../partials/breadcrumbs/breadcrumbs.pug
 						block content-wrapper
