--- a/src/partials/sidebar/sidebar.pug
+++ b/src/partials/sidebar/sidebar.pug
@@ -20,15 +20,10 @@ section.sidebar_wrapper.navview-pane.bg-blue.fg-white
 	.sidebar_nav-title.text-medium.my-2.px-3.enlarge-3 System
 	ul.navview-menu.bg-blue.bg-blue-hover
 		li
-			a(href='#dashboard')
+			a(href='index.html')
 				span.icon
 					span.mif-meter
 				span.caption Dashboard
-		li
-			a(href='#widgets')
-				span.icon
-					span.mif-widgets
-				span.caption Widgets
 		li
 			a.dropdown-toggle(href='#')
 				span.icon
@@ -124,12 +119,12 @@ section.sidebar_wrapper.navview-pane.bg-blue.fg-white
 			ul.navview-menu.stay-open(data-role='dropdown').bg-blue.bg-blue-hover
 				li.item-header Forms
 				li
-					a(href='#forms-basic')
+					a(href='form-basic.html')
 						span.icon
 							span.mif-spinner2
 						span.caption Basic elements
 				li
-					a(href='#forms-extended')
+					a(href='form-extended.html')
 						span.icon
 							span.mif-spinner2
 						span.caption Extended elements
