--- a/src/partials/all.sass
+++ b/src/partials/all.sass
@@ -1,6 +1,7 @@
 @import sidebar/sidebar
 @import appbar/appbar
 @import dashboard/dashboard
+@import forms/forms
 main
 	.navview-content
 		padding-top: 52px
