--- a/src/partials/sidebar/sidebar.pug
+++ b/src/partials/sidebar/sidebar.pug
@@ -128,16 +128,6 @@ section.sidebar_wrapper.navview-pane.bg-blue.fg-white
 						span.icon
 							span.mif-spinner2
 						span.caption Extended elements
-				li
-					a(href='#forms-layouts')
-						span.icon
-							span.mif-spinner2
-						span.caption Layouts
-				li
-					a(href='#forms-validating')
-						span.icon
-							span.mif-spinner2
-						span.caption Validating
 		li
 			a.dropdown-toggle(href='#')
 				span.icon
@@ -146,15 +136,15 @@ section.sidebar_wrapper.navview-pane.bg-blue.fg-white
 			ul.navview-menu.stay-open(data-role='dropdown').bg-blue.bg-blue-hover
 				li.item-header Tables
 				li
-					a(href='#table-classes')
+					a(href='table-classes.html')
 						span.icon
 							span.mif-spinner2
 						span.caption Table classes
 				li
-					a(href='#table-component')
+					a(href='table-components.html')
 						span.icon
 							span.mif-spinner2
-						span.caption Table component
+						span.caption Table components
 		li
 			a.dropdown-toggle(href='#')
 				span.icon
