--- a/src/partials/all.sass
+++ b/src/partials/all.sass
@@ -2,6 +2,7 @@
 @import appbar/appbar
 @import dashboard/dashboard
 @import forms/forms
+@import tables/tables
 main
 	.navview-content
 		padding-top: 52px
