--- a/src/partials/dashboard/dashboard.pug
+++ b/src/partials/dashboard/dashboard.pug
@@ -132,74 +132,145 @@ section.dashboard_wrapper
 	aside.dashboard_block.row
 		.col-xl-7
 			div(data-role="panel" data-title-caption="Staff list" data-collapsible="true" data-title-icon="<span class='mif-users'></span>")
-				.template_table
-					.template_table--top
-						.info-wrapper
-						.search-wrapper
-					table.table.row-border.row-hover(
-						id="template_table"
-						data-role="table"
-						data-show-search="true"
-						data-check="true"
-						data-check-style="2"
-						data-check-name="_id"
-						data-rows-steps="-1, 5, 10, 20"
-						data-rows="5"
-						data-rownum="true"
-						data-pagination="true"
-						data-table-rows-count-title="Show entries:"
-						data-table-search-title="Search:"
-						data-pagination-short-mode="true"
-						data-table-info-title="Showing $1 to $2 of $3 entries"
-						data-all-records-title="All"
-						data-info-wrapper=".info-wrapper"
-						data-pagination-wrapper=".pagination-wrapper"
-						data-search-wrapper=".search-wrapper"
-						data-rows-wrapper=".rows-wrapper"
-						data-horizontal-scroll="true"
-					)
+				.custom_table-wrapper
+					.custom_table-top.d-flex.flex-wrap.flex-nowrap-lg.flex-align-center.flex-justify-center.flex-justify-start-lg.mb-2
+						.custom_table-search.w-100.mb-2.mb-0-lg
+						.custom_table-rows.mx-2
+						.custom_table-actions
+							button.button.square(onclick="$('#table1').data('table').toggleInspector()")
+								span.mif-cog
+					table#table1(data-role="table" data-search-wrapper=".custom_table-search" data-rows-wrapper=".custom_table-rows" data-info-wrapper=".custom_table-info" data-pagination-wrapper=".custom_table-pagination" data-pagination-short-mode="true" data-horizontal-scroll="true" data-check="true" data-check-style="2" data-rownum="true").table.table-border.cell-border
 						thead
 							tr
-								th(
-									class="sortable-column"
-									data-name="_id"
-								) ID
-								th(
-									class="sortable-column"
-									data-name="name"
-								) Name
-								th(
-									class="sortable-column"
-									data-format="date"
-									data-name="birthday"
-								) Birthday
-								th(
-									class="sortable-column"
-									data-format="date"
-									data-name="start"
-								) Start
-								th(
-									class="sortable-column"
-									data-format="number"
-									data-name="age"
-								) Age
+								th(data-sort-dir="asc" data-format="number" data-name="id").sortable-column ID
+								th(data-name="name").sortable-column Name
+								th(data-format="date" data-format-mask="%d-%m-%y" data-name="start").sortable-column Start
+								th(data-format="int" data-name="age").sortable-column Age
+								th(data-format="money" data-name="salary").sortable-column Salary
 						tbody
-							-for(var i = 0; i < 20; i++)
-								tr
-									if i < 10
-										td stf_0
-											=`${i}`
-									else
-										td stf_
-											=`${i}`
-									td Loc Thanh 
-										=`${i}`
-									td 19/09/1998
-									td 18/10/2020
-									td 22
-					.template_table--bottom
-						.pagination-wrapper
-						.rows-wrapper
+							tr
+								td 1
+								td Bill
+								td 31-12-2017
+								td 63
+								td $7,843
+							tr
+								td 2
+								td Steve
+								td 13-06-2018
+								td 63
+								td $7,843
+							tr
+								td 3
+								td Larry
+								td 31-12-2017
+								td 28
+								td $8,877
+							tr
+								td 4
+								td Troy
+								td 11-03-2019
+								td 26
+								td $5,405
+							tr
+								td 5
+								td Kennedy
+								td 11-02-2018
+								td 60
+								td $5,780
+							tr
+								td 6
+								td Cullen
+								td 23-09-2017
+								td 62
+								td $5,482
+							tr
+								td 7
+								td Eric
+								td 04-01-2019
+								td 53
+								td $6,490
+							tr
+								td 8
+								td Jakeem
+								td 29-06-2018
+								td 18
+								td $6,084
+							tr
+								td 9
+								td Kieran
+								td 11-04-2019
+								td 18
+								td $5,043
+							tr
+								td 10
+								td Stephen
+								td 23-09-2017
+								td 54
+								td $5,895
+							tr
+								td 11
+								td Cody
+								td 26-03-2018
+								td 65
+								td $8,558
+							tr
+								td 12
+								td Cody
+								td 26-03-2018
+								td 65
+								td $8,558
+							tr
+								td 13
+								td Otto
+								td 26-03-2018
+								td 25
+								td $8,124
+							tr
+								td 14
+								td Timon
+								td 14-12-2017
+								td 39
+								td $5,031
+							tr
+								td 15
+								td Owen
+								td 25-05-2018
+								td 24
+								td $6,595
+							tr
+								td 16
+								td Tobias
+								td 02-03-2019
+								td 21
+								td $7,926
+							tr
+								td 17
+								td Logan
+								td 17-02-2018
+								td 24
+								td $8,062
+							tr
+								td 18
+								td Laith
+								td 02-04-2019
+								td 45
+								td $6,886
+							tr
+								td 19
+								td Damian
+								td 03-01-2018
+								td 35
+								td $9,852
+							tr
+								td 20
+								td Wallace
+								td 22-05-2018
+								td 28
+								td $8,678
+					.custom_table-bottom.d-flex.flex-wrap.flex-nowrap-lg.flex-align-center.flex-justify-center.flex-justify-start-lg.mb-2
+						.custom_table-info.w-100.w-auto-lg.mb-2.mb-0-lg
+						.custom_table-pagination.ml-auto-lg
 		.col-xl-5
 			div(data-role="panel" data-title-caption="New members" data-collapsible="true" data-title-icon="<span class='mif-users'></span>")
 				ul.user-list
