--- a/src/partials/sidebar/sidebar.pug
+++ b/src/partials/sidebar/sidebar.pug
@@ -1,4 +1,4 @@
-section.sidebar_wrapper.navview-pane.bg-blue.fg-white
+section.sidebar_wrapper.navview-pane.bg-blue.fg-white.z-5
 	.sidebar_header.d-flex.flex-align-center
 		button.pull-button.bg-blue-hover
 			span.mdi.mdi-menu.fg-white
@@ -153,22 +153,22 @@ section.sidebar_wrapper.navview-pane.bg-blue.fg-white
 			ul.navview-menu.stay-open(data-role='dropdown').bg-blue.bg-blue-hover
 				li.item-header UI Elements
 				li
-					a(href='#colors')
+					a(href='ui-colors.html')
 						span.icon
 							span.mif-paint
 						span.caption Colors
 				li
-					a(href='#typography')
+					a(href='ui-typography.html')
 						span.icon
 							span.mif-bold
 						span.caption Typography
 				li
-					a(href='#buttons')
+					a(href='ui-buttons.html')
 						span.icon
 							span.mif-apps
 						span.caption Buttons
 				li
-					a(href='#tabs')
+					a(href='ui-tabs.html')
 						span.icon
 							span.mif-open-book
 						span.caption Accordion & Tabs
@@ -178,12 +178,12 @@ section.sidebar_wrapper.navview-pane.bg-blue.fg-white
 							span.mif-dashboard
 						span.caption Tiles
 				li
-					a(href='#treeview')
+					a(href='ui-treeview.html')
 						span.icon
 							span.mif-tree
 						span.caption TreeView
 				li
-					a(href='#listview')
+					a(href='ui-listview.html')
 						span.icon
 							span.mif-list
 						span.caption ListView
@@ -193,7 +193,7 @@ section.sidebar_wrapper.navview-pane.bg-blue.fg-white
 							span.mif-spinner5
 						span.caption Progress & activities
 				li
-					a(href='#list')
+					a(href='ui-list.html')
 						span.icon
 							span.mif-list2
 						span.caption List component
