--- a/src/partials/all.sass
+++ b/src/partials/all.sass
@@ -3,6 +3,7 @@
 @import dashboard/dashboard
 @import forms/forms
 @import tables/tables
+@import ui-elements/ui-elements
 main
 	.navview-content
 		padding-top: 52px
