--- a/src/partials/all.sass
+++ b/src/partials/all.sass
@@ -4,6 +4,8 @@
 @import forms/forms
 @import tables/tables
 @import ui-elements/ui-elements
+@import information/information
+@import wizard/wizard
 main
 	.navview-content
 		padding-top: 52px
