--- a/src/partials/sidebar/sidebar.pug
+++ b/src/partials/sidebar/sidebar.pug
@@ -173,11 +173,6 @@ section.sidebar_wrapper.navview-pane.bg-blue.fg-white.z-5
 							span.mif-open-book
 						span.caption Accordion & Tabs
 				li
-					a(href='#tiles')
-						span.icon
-							span.mif-dashboard
-						span.caption Tiles
-				li
 					a(href='ui-treeview.html')
 						span.icon
 							span.mif-tree
@@ -188,47 +183,10 @@ section.sidebar_wrapper.navview-pane.bg-blue.fg-white.z-5
 							span.mif-list
 						span.caption ListView
 				li
-					a(href='#progress')
-						span.icon
-							span.mif-spinner5
-						span.caption Progress & activities
-				li
 					a(href='ui-list.html')
 						span.icon
 							span.mif-list2
 						span.caption List component
-				li
-					a(href='#splitter')
-						span.icon
-							span.mif-table
-						span.caption Splitter
-				li
-					a(href='#calendar')
-						span.icon
-							span.mif-calendar
-						span.caption Calendar
-				li
-					a(href='#countdown')
-						span.icon
-							span.mif-watch
-						span.caption Countdown
-		li
-			a.dropdown-toggle(href='#')
-				span.icon
-					span.mif-play
-				span.caption Media
-			ul.navview-menu.stay-open(data-role='dropdown').bg-blue.bg-blue-hover
-				li.item-header Media
-				li
-					a(href='#video')
-						span.icon
-							span.mif-spinner2
-						span.caption Video player
-				li
-					a(href='#audio')
-						span.icon
-							span.mif-spinner2
-						span.caption Audio
 		li
 			a.dropdown-toggle(href='#')
 				span.icon
@@ -237,83 +195,20 @@ section.sidebar_wrapper.navview-pane.bg-blue.fg-white.z-5
 			ul.navview-menu.stay-open(data-role='dropdown').bg-blue.bg-blue-hover
 				li.item-header Information
 				li
-					a(href='#windows')
+					a(href='info-hints.html')
 						span.icon
 							span.mif-spinner2
-						span.caption Windows
+						span.caption Hints
 				li
-					a(href='#dialogs')
+					a(href='info-dialog.html')
 						span.icon
 							span.mif-spinner2
 						span.caption Dialogs
 				li
-					a(href='#info-boxes')
+					a(href='info-infobox.html')
 						span.icon
 							span.mif-spinner2
 						span.caption InfoBox
-				li
-					a(href='#hints')
-						span.icon
-							span.mif-spinner2
-						span.caption Hints
-		li
-			a.dropdown-toggle(href='#')
-				span.icon
-					span.mif-envelop
-				span.caption Mailbox
-				span.badges.ml-auto.mr-3
-					span.badge.inline.bg-cyan.fg-white 17
-					span.badge.inline.bg-red.fg-white 7
-					span.badge.inline.bg-green.fg-white 4
-					span.badge.inline.bg-orange.fg-white 3
-			ul.navview-menu.stay-open(data-role='dropdown').bg-blue.bg-blue-hover
-				li.item-header Mailbox
-				li
-					a(href='#inbox')
-						span.icon
-							span.mif-mail
-						span.caption Inbox
-				li
-					a(href='#inbox2')
-						span.icon
-							span.mif-mail
-						span.caption Inbox2
-				li
-					a(href='#compose')
-						span.icon
-							span.mif-mail-read
-						span.caption Compose
-				li
-					a(href='#read-email')
-						span.icon
-							span.mif-mail-read
-						span.caption Read email
-		li
-			a(href='#chat')
-				span.icon
-					span.mif-bubbles
-				span.caption Chat
-				span.badges.ml-auto.mr-3
-					span.badge.inline.bg-red.fg-white 7
-					span.badge.inline.bg-green.fg-white 4
-					span.badge.inline.bg-orange.fg-white 3
-		li
-			a.dropdown-toggle(href='#')
-				span.icon
-					span.mif-magic-wand
-				span.caption Wizards
-			ul.navview-menu.stay-open(data-role='dropdown').bg-blue.bg-blue-hover
-				li.item-header Wizards
-				li
-					a(href='#master')
-						span.icon
-							span.mif-spinner2
-						span.caption Master
-				li
-					a(href='#wizard')
-						span.icon
-							span.mif-spinner2
-						span.caption Wizard
 	.data-box.w-100.text-center.reduce-2.p-2.border-top.bd-grayMouse(style='position: absolute; bottom: 0')
 		div © 2019 
 			a.no-decor(href='#').fg-white Admin2L
