--- a/src/partials/all.sass
+++ b/src/partials/all.sass
@@ -6,6 +6,8 @@
 @import ui-elements/ui-elements
 @import information/information
 @import wizard/wizard
+html, body
+	overflow: hidden
 main
 	.navview-content
 		padding-top: 52px
